aligned look of the allocation bar all day vacations are displayed it's no longer possible to remove vacations

--- a/webui/app/cats/detail/style.css
+++ b/webui/app/cats/detail/style.css
@@ -33,21 +33,21 @@
 }
 
 .allocation-bar-background-panel-div {
-  background: #AAA;
+  background: #e6e6e6;
 }
 
 .allocation-bar-block-bin-div {
   border-radius: 2px;
   width: 20px;
-  margin: 0px auto;
+  margin: -6px auto;
   font-size: 18px;
   text-align: center;
-  color: #e6e6e6;
+  color: #ffb6b6;
   -webkit-transition: color 0.2s linear;
 }
 
 .allocation-bar-block-bin-div:hover {
-  color: black;
+  color: #d44242;
   cursor: pointer;
 }
 
